--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
         <div class="logo">LOGO</div>
         <div class="nav-links">
             <a href="#home">Home</a>
-            <a href="#Calculator">Calculator</a>
+            <a href="calculator.html">Calculator</a>
             <a href="#services">Services</a>
             <a href="#ai-assistant" class="ai-assistant">
                 <span class="ai-glow-ring">
