--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,6 @@
             <a href="#about">About</a>
         </div>
         <div class="nav-actions">
-            <a href="#" class="sign-in-btn">Sign In</a>
             <div class="social-icons">
                 <i class="fab fa-github social-icon"></i>
                 <i class="fab fa-discord social-icon"></i>
@@ -69,52 +68,52 @@
 
     <section class="grid-gallery">
         <div class="gallery-container">
-            <div class="gallery-item item1">
+            <a class="gallery-item item1" href="category.html?slug=financial-planning">
                 <img src="images/financial-planning.jpg" alt="Financial Planning">
                 <div class="item-content">
                     <h3>Financial Planning</h3>
                     <p>Expert guidance for your financial future</p>
                 </div>
-            </div>
-            <div class="gallery-item item2">
+            </a>
+            <a class="gallery-item item2" href="category.html?slug=smart-investment">
                 <img src="images/smart-investment.jpg" alt="Investment">
                 <div class="item-content">
                     <h3>Smart Investment</h3>
                     <p>Grow your wealth wisely</p>
                 </div>
-            </div>
-            <div class="gallery-item item3">
+            </a>
+            <a class="gallery-item item3" href="category.html?slug=real-estate">
                 <img src="images/real-estate.jpg" alt="Real Estate">
                 <div class="item-content">
                     <h3>Real Estate</h3>
                     <p>Property investment solutions</p>
                 </div>
-            </div>
-            <div class="gallery-item item4">
+            </a>
+            <a class="gallery-item item4" href="category.html?slug=retirement-plans">
                 <img src="images/retirement.jpg" alt="Retirement">
                 <div class="item-content">
                     <h3>Retirement Plans</h3>
                     <p>Secure your golden years</p>
                 </div>
-            </div>
-            <div class="gallery-item item5">
+            </a>
+            <a class="gallery-item item5" href="category.html?slug=education-funds">
                 <img src="images/education.jpg" alt="Education">
                 <div class="item-content">
                     <h3>Education Funds</h3>
                     <p>Invest in knowledge</p>
                 </div>
-            </div>
-            <div class="gallery-item item6">
+            </a>
+            <a class="gallery-item item6" href="category.html?slug=business-growth">
                     <img src="images/business.jpg" alt="Business">
                 <div class="item-content">
                     <h3>Business Growth</h3>
                     <p>Scale your enterprise</p>
                 </div>
-            </div>
+            </a>
         </div>
     </section>
-
-    <section class="investment-plans">
+    
+    <!--<section class="investment-plans">
         <div class="container">
             <h2>Our plans</h2>
             <div class="plans-grid">
@@ -151,7 +150,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <section class="monthly-schemes">
         <div class="container">
@@ -312,11 +311,12 @@
             </div>
         </div>
     </footer>
-<!--<div class="ai-assistant-sticky" id="aiAssistantBtn">
+    <div class="ai-assistant-sticky" id="aiAssistantBtn" aria-label="AI Mode">
         <span class="ai-glow-ring">
             <img src="bank-logos/siri.png" alt="AI Assistant" class="ai-siri-img" />
         </span>
-    </div>-->
+        <span class="ai-mode-label">AI Mode</span>
+    </div>
     
 
     <div class="ai-chat-sidebar" id="aiChatSidebar">
